modified:   index.html 	new file:   styles.css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document Rofif Taqy Yassar</title>
+    <style>
+        p {
+            background-color: brown;
+        }
+    </style>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    
+    <header style="background-color: blue;">
+        <h1>Title</h1>
+        <h1>title</h1> 
+    </header>
+    <article>
+        <p class="content">Halo</p> 
+        <p class="content">Halo</p>
+        <p>Hai</p>
+    </article>
+    <footer>
+        <h2>Footer</h2>
+    </footer>
+    <button style="margin-top: 42px;" onclick="nyalakanlampu()"> ON
+    </button>
+    <script>
+        function nyalakanlampu() {
+            alert('lampu berhasil nyala');
+        }
+    </script>
 </body>
 </html>
